fix: add relative shifts for hard-positioned elements

--- a/src/scss/sections/help-shelter.scss
+++ b/src/scss/sections/help-shelter.scss
@@ -8,19 +8,21 @@
         text-align: center;
         max-width: 380px;
         margin: 0 auto 60px auto;
+        position: relative;
+        top: 1px;
+        left: 1px;
     }
     &__icons {
         display: flex;
         flex-wrap: wrap;
-        padding-top: 120px;
-        gap: 120px;
+        column-gap: 120px;
         justify-content: center;
         max-width: 1029px;
         margin: 0 auto 0 auto;
     }
     &__icon {
         display: inline-block;
-        margin: -120px 0 55px 0;
+        margin: 0 0 55px 0;
         img {
             display: block;
             height: 60px;
