--- a/src/scss/sections/our-pets.scss
+++ b/src/scss/sections/our-pets.scss
@@ -10,6 +10,8 @@
         max-width: 400px;
         margin: 0 auto 59px auto;
         vertical-align: middle;
+        position: relative;
+        top: 1px;
     }
     &__slider {
         margin-bottom: 60px;
