--- a/src/scss/sections/start.scss
+++ b/src/scss/sections/start.scss
@@ -27,4 +27,9 @@
         max-width: 460px;
         margin-bottom: 41px;
     }
+
+    &__button {
+        position: relative;
+        top: 1px;
+    }
 }
